<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">TRUE</string>
    <string name="question_1">这是 1 个好问题？</string>
    <string name="question_2">这是 2 个好问题？</string>
    <string name="question_3">这是 3 个好问题？</string>
    <string name="question_4">这是 4 个好问题？</string>
    <string name="question_5">这是 5 个好问题？</string>
    <string name="false_button">FALSE</string>
    <string name="correct_toast">correct!</string>
    <string name="incorrect_toast">incorrect!</string>
    <string name="next_button">NEXT</string>
    <string name="warning_text">确定要看答案么？</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">cheat is wrong!</string>
</resources>
